# manipulator_gripper_control

./: README.md
gripper_control/: can_close.txt  can_open.txt  can_stop.txt
gripper_control/gripper_control/: CMakeLists.txt  package.xml
gripper_control/gripper_control/launch/: gripper_control_server.launch
gripper_control/gripper_control/modular/: modular_T85.py
gripper_control/gripper_control/scripts/: gripper_control_client.py  gripper_control_server.py  test_script.py
gripper_control/gripper_control/srv/: gripper_control.srv
